[package]
name = "the-newtype"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The Newtype trait"
homepage = "https://github.com/smmoosavi/the-newtype"
repository = "https://github.com/smmoosavi/the-newtype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
the-newtype-core = { path = "./core", version = "0.1.0" }
the-newtype-macros = { path = "./macros", version = "0.1.0" }

[workspace]
members = [
    "core",
    "macros",
]