[package]
name = "the-newtype-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The Newtype trait core"
homepage = "https://github.com/smmoosavi/the-newtype"
repository = "https://github.com/smmoosavi/the-newtype"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
